2012-04-10  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* lib/oxygen/simulationserver/agentcontrol.h: 
	* lib/oxygen/simulationserver/agentcontrol.cpp: 
	* lib/oxygen/simulationserver/agentcontrol_c.cpp:
	- AgentControl multi-threaded implementation added with some cleanups. 
	  Thanks to Andreas Seekircher for providing the patch. 
	 
	* spark/spark.rb: 
	- sets AgentControls multi-threaded mode according to $threadedAgentControl
	  variable

2012-04-07  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* lib/oxygen/simulationserver/simulationserver.cpp (SimulationServer::Step): 
	- quit if GameControlServer is finished (e.g. the end of a game)

2012-02-16  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* lib/salt/gmath.h: 
	- add missing std:: prefix for isfinite (fix gcc 4.7 compile error)

2012-02-14  Sander van Dijk  <sgvandijk@gmail.com>

	* lib/zeitgeist/scriptserver/scriptserver.cpp (RunInitScript): 
	* spark/spark.h (Spark): 
	* spark/spark.cpp (Spark): 
	- add --init-script-prefix option to specify location of spark.rb, zeitgeist.rb, etc

2012-01-22  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* lib/kerosin/renderserver/rendercontrol.cpp (RenderControl::EndCycle): 
	* lib/kerosin/openglserver/openglserver.cpp (OpenGLServer::Init): 
	- check if opengl system wants to quit
	
	* plugin/openglsyssdl/openglsystemsdl.h (OpenGLSystemSDL.mWantsToQuit): 
	* plugin/openglsyssdl/openglsystemsdl.cpp (OpenGLSystemSDL::Update): 
	- handle SDL_QUIT event and add WantsToQuit function
	
	* lib/kerosin/openglserver/openglsystem.h (OpenGLSystem):
	- add WantsToQuit() function

2011-05-02  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* CMakeLists.txt: 
	- strip files when creating binary packages
	- installer enhancements for mingw32 based setup
	
	* plugin/odeimps/CMakeLists.txt: 
	* plugin/collisionperceptor/CMakeLists.txt: 
	- added complete ode dependencies

2011-05-01  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* cmake/FindODE.cmake: 